--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,16 +7,13 @@
 main:
 
   - title: "Papers"
-    url: /papers/
+    url: /publications/
 
   - title: "Talks"
     url: /talks/    
-    
-  - title: "CV"
-    url: /cv/
 
   - title: "Courses"
-    url: /courses/    
+    url: /teaching/    
     
   - title: "Resources"
     url: /resources/
