--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "emmawing/emmawing.github.io"
 author:
   # Biographic information
   avatar           : "headshot_small.jpeg"
-  name             : # "Your Sidebar Name"
+  name             : "Emma Wing"
   pronouns         : #"she/her"  
   bio              : "Psycholinguist"
   location         : "Storrs, CT"
