--- a/_config.yml
+++ b/_config.yml
@@ -28,13 +28,13 @@ author:
   location         : "Storrs, CT"
   employer         : "University of Connecticut"
   uri              : # URL
-  email            : "emma dot wing at uconn dot edu" 
+  email            : "emma.wing@uconn.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : # URL
   impactstory      : # URL
-  orcid            : "https://orcid.org/0000-0003-0984-0295"
+  orcid            : # "https://orcid.org/0000-0003-0984-0295"
   semantic         : # URL
   pubmed           : # URL
   researchgate     : # URL
