--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Home"
+title                    : "Emma Wing"
 title_separator          : "-"
 name                     : &name "Emma Wing"
 description              : &description "personal description"
